When cleaning up anonymous content, let the ESM know; that way if any of it is :hover or :active the state will be updated accordingly.  Bug 314346, r+sr=roc